@@ -66,6 +66,9 @@ user_defined_state
       incompatible; previously the extensions of last mapper defined
       would receive these events.
 
+- firebird
+    - Added support for returning values from inserts (2.0+ only),
+      updates and deletes (2.1+ only).
 
 0.4.6
 =====
@@ -1573,7 +1576,7 @@ user_defined_state
 - The no-arg ResultProxy._row_processor() is now the class attribute
   `_process_row`.
 
-- Added support for returning values from inserts and udpates for
+- Added support for returning values from inserts and updates for
   PostgreSQL 8.2+. [ticket:797]
 
 - PG reflection, upon seeing the default schema name being used explicitly
